--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
         </p><h2>Setup</h2>
         <p>
             Start with cloning the repository containing the service mock project found <a
-                href="https://bitbucket.org/afklmdevnet/simple-travel-api-mock" target="_blank">here</a>.
+                href="https://github.com/Pim-Huisman/simple-travel-api-mock" target="_blank">here</a>.
             All the details required to start the service mock project and how to use it can be found in the included readme.
             The service mock project should NOT be altered and should only be used from your project.
             You can use the current project as starting point/template for your project.
